# gawd

./: CITATION.cff  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy.yaml  test.yaml
gawd/: __init__.py  __main__.py
test/: test_diff_tool.py  test_diff_tool_result.py
